--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -3,10 +3,10 @@
       "message": "SKヘルパー"
    },
    "APP_DESCRIPTION": {
-      "message": "匿名掲示板での多数のコメントの取得を効率化しローカルテキストファイルに保存します。これは法律の専門家による作業をサポートします。"
+      "message": "好き嫌い.comでの多数のコメントの取得を効率化しローカルテキストファイルに保存します。これは法律の専門家による作業をサポートします。"
    },
    "APP_VERSION": {
-      "message": "1.0.0"
+      "message": "1.0.2"
    },
    "APP_COPYRIGHT": {
       "message": "wxyz"
