--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,10 +3,10 @@
       "message": "SK helper"
    },
    "APP_DESCRIPTION": {
-      "message": "Collect plenty of comments from anonymous social forums including suki-kira.com efficiently and save them as a local text file. This is able to support the work of Legal Experts."
+      "message": "Collect plenty of comments from suki-kira.com efficiently and save them as a local text file."
    },
    "APP_VERSION": {
-      "message": "1.0.2"
+      "message": "1.0.3"
    },
    "APP_COPYRIGHT": {
       "message": "wxyz"
