--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
    "APP_NAME": {
-      "message": "SKヘルパー"
+      "message": "好き嫌いヘルパー"
    },
    "APP_DESCRIPTION": {
       "message": "好き嫌い.comでの多数のコメントの取得を効率化しローカルテキストファイルに保存します。"
