--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
    "APP_NAME": {
-      "message": "SK helper"
+      "message": "suki-kira helper"
    },
    "APP_DESCRIPTION": {
       "message": "Collect plenty of comments from suki-kira.com efficiently and save them as a local text file."
